src/styles/app.css
@import "tailwindcss";
@import "tw-animate-css";
@plugin "@tailwindcss/typography";

@custom-variant dark (&:where([data-mantine-color-scheme=dark], [data-mantine-color-scheme=dark] *));
@layer base {
  * {
    @apply border-gray-200;
  }
}

@theme {
  --color-dimmed: var(--mantine-color-dimmed);
  --font-sans: var(--mantine-font-family);
  --font-mono: var(--mantine-font-family-monospace);
  --color-vatprc: #c8102e;
  --color-vatprc-bright: #ff5a68;
}

.nav-list-grid {
  @apply grid w-100 max-w-[90vw] gap-3 p-2 md:w-125 md:grid-cols-2 lg:w-150;
}

.nav-list-column {
  @apply grid w-80 max-w-[90vw] gap-3 p-2;
}

:is(.nav-list-grid, .nav-list-column) .large-item {
  @apply bg-gray-100 px-6 py-4 font-bold dark:bg-gray-900;
}

:is(.nav-list-grid, .nav-list-column) a.large-item:hover {
  @apply bg-gray-50 dark:bg-gray-950;
}

:is(.nav-list-grid, .nav-list-column) .item {
  @apply px-3 py-2 text-sm hover:bg-gray-50 dark:hover:bg-gray-950;
}

.vatprc-prose {
  @apply prose-p:my-2;
  @apply prose-code:bg-gray-200 dark:prose-code:bg-gray-800;
  @apply prose-code:font-normal;
  @apply prose-code:p-0.5;
  @apply prose-code:before:content-none prose-code:after:content-none;
}

